add footer notes

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
       </div>
     </div>
 
+    <div class="footer">
+      <p>Downloaded files can be found in your Downloads folder.</p>
+    </div>
+
     <script>
       const path = require('path')
       require(path.join(__dirname, 'render.js'))
     </script>
   </body>
 </html>
-
